@@ -5,7 +5,7 @@ class RawhideVersion
     url = 'https://admin.fedoraproject.org/pkgdb/api/collections?pattern=master'
     uri = open(url).read
     result = JSON.parse(uri)
-    result['collections'][0]['dist_tag'].gsub(/.fc/, '')
+    result['collections'][0]['dist_tag'].gsub(/.fc/, '').to_i
   end
 
   def self.create_file
